manifests/anubis/machine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: anubis-machine
  name: anubis-machine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anubis-machine
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: anubis-machine
    spec:
      containers:
      - image: ghcr.io/techarohq/anubis:latest
        name: anubis
        ports:
        - containerPort: 3000
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: anubis-machine
  name: anubis-machine
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: anubis-machine
status:
  loadBalancer: {}
