manifests/anubis/svc_machine.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: anubis-machine
  name: anubis-machine
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: anubis-machine
status:
  loadBalancer: {}
