manifests/anubis/ingress_alex.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: alex
# spec:
#   rules:
#   - host: alexbissessur.dev
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: anubis-alex
#             port:
#               number: 3000


apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghostroute
spec:
  entryPoints:
  - websecure
  - web
  routes:
  - kind: Rule
    match: Host(`alexbissessur.dev`) && PathPrefix(`/rss`)
    services:
    - name: ghost-svc
      namespace: ghost
      port: 80

  - kind: Rule
    match: Host(`alexbissessur.dev`)
    services:
    - name: anubis-alex
      port: 3000
  tls:
    certResolver: le
